--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.44",
     "@types/react-redux": "^7.1.23",
     "bootstrap-icons": "^1.8.1",
+    "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.29.0",
